frame/support/test/tests/pallet_ui/hooks_invalid_item.stderr
error[E0107]: missing generics for trait `Hooks`
   --> tests/pallet_ui/hooks_invalid_item.rs:12:18
    |
12  |     impl<T: Config> Hooks for Pallet<T> {}
    |                     ^^^^^ expected 2 generic arguments
    |
note: trait defined here, with 2 generic parameters: `BlockNumber`, `Weight`
   --> $WORKSPACE/frame/support/src/traits/hooks.rs
    |
    | pub trait Hooks<BlockNumber, Weight: Zero> {
    |           ^^^^^ -----------  ------
help: add missing generic arguments
    |
12  |     impl<T: Config> Hooks<BlockNumber, Weight> for Pallet<T> {}
    |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~
